2012-05-14  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotaxis.tcl: Correct drawing of time-axis - labels were sometimes drawn to the right
	                of the whole plot (Note: same problem can occur with other types of axis,
	                but may be less likely in that context)

2012-05-07  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add a subtitle command (for the moment: XY-plots only)
	* plotpriv.tcl: Implement a subtitle command
	* plotconfig.tcl: Implement the configuration options for the subtitle

2012-04-23  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* xyplot.tcl: Remove explicit sourcing of "plotchart.tcl" - left-over from testing

2012-04-20  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Repair setZoomPan and introduce new axis configuration
	                 routine (for time-axis). Introduce -justify for axis labels
	* plotaxis.tcl: New axis configuration routine so that date/time format
	                works properly
	* plotconfig.tcl: Default for new axis option -justify
	* slidercnv.tcl: Add setZoomPan command for easy testing, use grid for resizing
	* texttxplot.tcl: Add change of date/time format for testing

2012-03-22  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* xyplot.tcl: Repair incompatibility introduced in Plotchart 2.0 vis-a-vis coordsToPixel
	*             and pixelToCoords

2012-03-14  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plottable.tcl: Correct support for the -anchor option - not entirely satisfactory yet

2012-03-13  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotaxis.tcl: Only plot a symbol in the legend, if that is the requested type
	* plotchart.tcl: Implement the -box/-axesbox option for table charts

2011-11-27  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.man: Add documentation for removefromlegend and several options
	* plotchart.tcl: Add method removefromlegend